add tunel d'achat 1/6

--- a/htdocs/app/design/frontend/jumbobag/default/layout/local.xml
+++ b/htdocs/app/design/frontend/jumbobag/default/layout/local.xml
@@ -342,4 +342,10 @@
     <customer_account_create>
 		<remove name="amazonpayments_login"></remove>
     </customer_account_create>
+
+    <checkout_onepage_index>
+		<remove name="onepage.amazonpayments.button.login"></remove>
+		<remove name="checkout.progress.wrapper"></remove>
+    </checkout_onepage_index>
+
 </layout>
