--- a/htdocs/app/design/frontend/jumbobag/default/template/checkout/cart.phtml
+++ b/htdocs/app/design/frontend/jumbobag/default/template/checkout/cart.phtml
@@ -81,18 +81,18 @@
     </form>
     <div class="cart-collaterals row clearfix">
         <div class="grid_4">
-            <?php if (!$this->getIsVirtual()): echo '<div class="cart-block well well--cart-block cart-shipping">'.$this->getChildHtml('shipping').'</div>'; endif; ?>
+            <?php if (!$this->getIsVirtual()): echo '<div class="cart-block well well--block cart-shipping">'.$this->getChildHtml('shipping').'</div>'; endif; ?>
         </div>
         <!--<div class="grid_4 newsletter">
           <?php /*echo $this->getLayout()->createBlock('newsletter/subscribe')->setTemplate('newsletter/subscribe.phtml')->toHtml();*/ ?>
         </div>-->
         <div class="grid_4">
-            <div class="cart-block well well--cart-block cart-coupon">
+            <div class="cart-block well well--block cart-coupon">
                 <?php echo $this->getChildHtml('coupon') ?>
             </div>
         </div>
         <div class="grid_3">
-            <div class="cart-block well well--cart-block cart-total">
+            <div class="cart-block well well--block cart-total">
                 <?php echo $this->getChildHtml('totals'); ?>
             </div>
             <div class="checkout-types-wrapper">
