--- a/htdocs/app/design/frontend/jumbobag/default/layout/local.xml
+++ b/htdocs/app/design/frontend/jumbobag/default/layout/local.xml
@@ -43,6 +43,8 @@
 			<action method="addCss"><stylesheet>css/button.css</stylesheet></action>
 			<action method="addCss"><stylesheet>css/customer.css</stylesheet></action>
 			<action method="addCss"><stylesheet>css/amazonLogin.css</stylesheet></action>
+			<action method="addCss"><stylesheet>css/catalogsearch.css</stylesheet></action>
+
 			<action ifconfig="shoppersettings/design/override_css" method="addItem"><type>skin_css</type><name>css/override.css</name></action>
 
             <action method="addItem"><type>js</type><name>queldorei/html5shiv.js</name><params/><if>lt IE 9</if></action>
@@ -171,14 +173,10 @@
 	</catalog_category_layered>
 
 	<catalogsearch_result_index translate="label">
-		<reference name="root">
-			<action method="setTemplate">
-				<template>page/2columns-left.phtml</template>
-			</action>
-		</reference>
-		<reference name="left">
-            <block type="shoppersettings/bestsellers" name="queldorei.left.bestsellers" template="queldorei/bestsellers.phtml"/>
-		</reference>
+        <reference name="product_list_toolbar">
+            <action method="addPagerLimit"><mode>grid</mode><limit>15</limit></action>
+            <action method="addPagerLimit"><mode>list</mode><limit>15</limit></action>
+        </reference>
 	</catalogsearch_result_index>
 
 	<catalogsearch_advanced_index translate="label">
@@ -190,11 +188,6 @@
 	</catalogsearch_advanced_index>
 
 	<catalogsearch_advanced_result translate="label">
-		<reference name="root">
-			<action method="setTemplate">
-				<template>page/2columns-left.phtml</template>
-			</action>
-		</reference>
 		<reference name="left">
             <block type="shoppersettings/bestsellers" name="queldorei.left.bestsellers" before="-" template="queldorei/bestsellers.phtml"/>
 		</reference>
