--- a/htdocs/app/design/frontend/jumbobag/default/template/checkout/onepage.phtml
+++ b/htdocs/app/design/frontend/jumbobag/default/template/checkout/onepage.phtml
@@ -24,7 +24,7 @@
                 <h2><?php echo $_stepInfo['label'] ?></h2>
                 <a href="#"><?php echo $this->__('Edit') ?></a>
             </div>
-            <div id="checkout-step-<?php echo $_stepId ?>" class="step a-item" style="display:none;">
+            <div id="checkout-step-<?php echo $_stepId ?>" class="step a-item well well--block" style="display:none;">
                 <?php echo $this->getChildHtml($_stepId) ?>
             </div>
         </li>
