--- a/htdocs/app/design/frontend/jumbobag/default/template/customer/widget/formName.phtml
+++ b/htdocs/app/design/frontend/jumbobag/default/template/customer/widget/formName.phtml
@@ -1,11 +1,11 @@
-<div class="form__group form__group--firstname">
+<div class="field form__group form__group--firstname">
     <label for="pass" class="required">
         <?= $this->__('Mage_Customer::First Name') ?><em>*</em>
     </label>
     <input type="text" id="<?= $this->getFieldId('firstname')?>" name="<?= $this->getFieldName('firstname')?>" title="<?= Mage::helper('core')->quoteEscape($this->getStoreLabel('firstname')) ?>" maxlength="255" class="input-text <?= $this->helper('customer/address')->getAttributeValidationClass('firstname') ?>" <?= $this->getFieldParams() ?> />
 </div><!--
 
---><div class="form__group form__group--lastname">
+--><div class="field form__group form__group--lastname">
     <label for="pass" class="required">
         <?= $this->__('Mage_Customer::Last Name') ?><em>*</em>
     </label>
