--- a/htdocs/skin/frontend/jumbobag/default/css/local.css
+++ b/htdocs/skin/frontend/jumbobag/default/css/local.css
@@ -442,10 +442,8 @@ a.product-image{display:block;position:relative;}
 .price-box{}
 .price-box a{white-space:nowrap;}
 .price-box a:hover{text-decoration:none;}
-.price-box .price{color:#1d4b99;font-weight:400;font-size:16px;}
-.price-box .old-price { color: red; font-size: 1em; text-decoration: line-through; font-weight: bolder; }
-.price-box .special-price .price-label, .price-box .old-price .price-label { display: none; }
-.price-box .old-price .price { color:#1d4b99; text-decoration: none; font-size: 1em;}
+.price-box .price{color:#97d2c9;font-weight:400;font-size:16px;}
+.price-box .old-price .price{color:#8e8e8e;font-weight:400;font-size:11px;}
 .availability{}
 .in-stock{color:green}
 .out-of-stock{color:red}
@@ -824,7 +822,7 @@ div.alert button:hover{cursor:pointer;background-position:0 -9px;}
 .opc .form-list .field{width:50%;}
 .opc .td-label{display:none;font-style:italic;width:90px;}
 .opc .product-name{overflow:hidden;}
-#checkout-step-login{padding:0;margin:0;background:none transparent;border:0;box-shadow:none;-moz-box-shadow:none;-webkit-box-shadow:none;}
+#checkout-step-login{padding:0;margin:0;background:none transparent !important;border:0;box-shadow:none;-moz-box-shadow:none;-webkit-box-shadow:none;}
 #checkout-step-login .block-checkout-register, #checkout-step-login .block-checkout-login{width:378px}
 #checkout-step-login .block-checkout-register{margin-left:0}
 #checkout-step-login .block-checkout-login{margin-right:0}
@@ -1003,7 +1001,7 @@ div.alert button:hover{cursor:pointer;background-position:0 -9px;}
 .product-view .product-shop .price-box{position:relative;float:left;}
 .product-view .product-shop .price-box .price-label{display:block;}
 .product-view .product-shop .price-box .price{font-size:48px;line-height:48px;}
-.product-view .product-shop .price-box .old-price{position:absolute;left:100%;margin:7px 14px;}
+.product-view .product-shop .price-box .old-price{position:absolute;left:100%;margin:-59px 14px;}
 .product-view .product-shop .price-box .old-price .price{color:#b5b5b5;font-size:14px;line-height:100%;}
 .product-view .product-shop .price-box p{}
 .product-view .product-shop .price-box-bundle{float:none;}
