--- a/htdocs/app/design/frontend/jumbobag/default/template/tax/checkout/grandtotal.phtml
+++ b/htdocs/app/design/frontend/jumbobag/default/template/tax/checkout/grandtotal.phtml
@@ -1,32 +1,32 @@
 <?php if ($this->includeTax() && $this->getTotalExclTax()>=0):?>
-<tr>
+<tr class="grandtotal-label">
     <td style="<?php echo $this->getStyle() ?>" class="a-right" colspan="<?php echo $this->getColspan(); ?>">
         <strong><?php echo $this->helper('tax')->__('Grand Total Excl. Tax')?></strong>
     </td>
 </tr>
-<tr>
+<tr class="grandtotal-figure">
     <td style="<?php echo $this->getStyle() ?>" class="a-right" colspan="<?php echo $this->getColspan(); ?>">
         <strong><?php echo $this->helper('checkout')->formatPrice($this->getTotalExclTax()) ?></strong>
     </td>
 </tr>
 <?php echo $this->renderTotals('taxes', $this->getColspan()); ?>
-<tr>
+<tr class="grandtotal-label">
     <td style="<?php echo $this->getStyle() ?>" class="a-right" colspan="<?php echo $this->getColspan(); ?>">
         <strong><?php echo $this->helper('tax')->__('Grand Total Incl. Tax')?></strong>
     </td>
 </tr>
-<tr>
+<tr class="grandtotal-figure">
     <td style="<?php echo $this->getStyle() ?>" class="a-right" colspan="<?php echo $this->getColspan(); ?>">
         <strong><?php echo $this->helper('checkout')->formatPrice($this->getTotal()->getValue()) ?></strong>
     </td>
 </tr>
 <?php else:?>
-<tr>
+<tr class="grandtotal-label">
     <td style="<?php echo $this->getStyle() ?>" class="a-right" colspan="<?php echo $this->getColspan(); ?>">
         <strong><?php echo $this->getTotal()->getTitle() ?></strong>
     </td>
 </tr>
-<tr>
+<tr class="grandtotal-figure">
     <td style="<?php echo $this->getStyle() ?>" class="a-right" colspan="<?php echo $this->getColspan(); ?>">
         <strong><?php echo $this->helper('checkout')->formatPrice($this->getTotal()->getValue()) ?></strong>
     </td>
