--- a/htdocs/skin/frontend/jumbobag/default/css/local.css
+++ b/htdocs/skin/frontend/jumbobag/default/css/local.css
@@ -716,7 +716,26 @@ div.alert button:hover{cursor:pointer;background-position:0 -9px;}
 .cart .cart-collaterals .cart-total .checkout-types{float:none;position:relative;width:100%;overflow:hidden;margin:0;padding:30px 0 25px;background:#fbfbfb;text-align:center;-webkit-box-shadow:inset 0px 5px 6px -4px rgba(0, 0, 0, 0.15);-moz-box-shadow:inset 0px 5px 6px -4px rgba(0, 0, 0, 0.15);box-shadow:inset 0px 5px 6px -4px rgba(0, 0, 0, 0.15);}
 .cart .cart-collaterals .cart-total .checkout-types button.button{margin:0 0 10px}
 
+
+// Fix this
+.data-table{border-collapse:separate;border-top:6px solid #575757;-webkit-border-radius:2px;-moz-border-radius:2px;border-radius:2px;-moz-box-shadow:0px 0px 8px rgba(0, 0, 0, 0.15);-webkit-box-shadow:0px 0px 8px rgba(0, 0, 0, 0.15);box-shadow:0px 0px 8px rgba(0, 0, 0, 0.15);}
+.data-table th, .data-table td, .data-table td a{color:#000;color:rgba(0,0,0,0.67)}
 .data-table td a.product-image, .data-table td a.product-image img{display:block;margin:0 auto;}
+.data-table td a:hover{color:#000;text-decoration:none;}
+.data-table tbody td{border:1px solid #e9e9e9;border-top:none;border-left:none;}
+.data-table tbody tr:last-child td{border-bottom:none;}
+.data-table thead, .data-table tfoot{background:#fafafa;}
+.data-table thead th{-webkit-box-shadow:inset 0px -4px 6px -4px rgba(0, 0, 0, 0.15);-moz-box-shadow:inset 0px -4px 6px -4px rgba(0, 0, 0, 0.15);box-shadow:inset 0px -4px 6px -4px rgba(0, 0, 0, 0.15);}
+.data-table tfoot td{-webkit-box-shadow:inset 0px 4px 6px -4px rgba(0, 0, 0, 0.15);-moz-box-shadow:inset 0px 4px 6px -4px rgba(0, 0, 0, 0.15);box-shadow:inset 0px 4px 6px -4px rgba(0, 0, 0, 0.15);}
+.data-table tr.even, .data-table tr.odd{background-color:#fff;}
+.data-table th{padding:18px 23px;font-weight:300;}
+.data-table td{padding:18px;}
+.data-table td.td-edit, .data-table td.td-price{padding:26px 18px;}
+.data-table td.td-image{border-left:none;}
+.data-table td.td-image img{width:115px;height:auto;}
+.data-table td.td-delete{border-right:none;}
+
+
 .data-table .product-name{font-weight:700;}
 .data-table .td-title{display:none;}
 .data-table .td-actions{display:none;}
