--- a/htdocs/skin/frontend/new_jumbobag/default/css/local.css
+++ b/htdocs/skin/frontend/new_jumbobag/default/css/local.css
@@ -4695,6 +4695,8 @@ div.alert button:hover {
   box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.15);
 }
 .data-table th,
+.data-table td,
+.data-table td a,
 .data-table td {
   color: #000;
 }
@@ -4702,6 +4704,10 @@ div.alert button:hover {
 .data-table td a.product-image img {
   display: block;
   margin: 0 auto;
+}
+.data-table td a:hover {
+  color: #000;
+  text-decoration: none;
 }
 .data-table tbody td {
   border: 1px solid #e9e9e9;
