--- a/htdocs/skin/frontend/jumbobag/default/css/checkout.css
+++ b/htdocs/skin/frontend/jumbobag/default/css/checkout.css
@@ -1,3 +1,291 @@
+/* Dirty reset for our pages, since everything has been hard styled */
+
+.checkout-cart-index .data-table th,
+.checkout-cart-index .data-table td,
+.checkout-onepage-index .data-table th,
+.checkout-onepage-index .data-table td {
+	border: none !important;
+}
+.checkout-cart-index .data-table td a:hover,
+.checkout-onepage-index .data-table td a:hover {
+}
+.checkout-cart-index .data-table tbody td,
+.checkout-onepage-index .data-table tbody td {
+}
+
+.checkout-cart-index .data-table tbody tr:last-child td,
+.checkout-onepage-index .data-table tbody tr:last-child td {
+	padding: 8px;
+}
+
+.checkout-cart-index .data-table thead,
+.checkout-cart-index .data-table tfoot,
+.checkout-onepage-index .data-table thead,
+.checkout-onepage-index .data-table tfoot {
+}
+.checkout-cart-index .data-table thead th,
+.checkout-onepage-index .data-table thead th,
+.checkout-cart-index .data-table tfoot td,
+.checkout-onepage-index .data-table tfoot td {
+	box-shadow: none;
+	-moz-box-shadow: none;
+	-webkit-box-shadow: none;
+}
+
+.checkout-cart-index .data-table tr.even,
+.checkout-cart-index .data-table tr.odd,
+.checkout-onepage-index .data-table tr.even,
+.checkout-onepage-index .data-table tr.odd {
+	background: #f6f6f6;
+}
+
+.checkout-cart-index .data-table th,
+.checkout-onepage-index .data-table th {
+	padding: 8px;
+}
+.checkout-cart-index .data-table td,
+.checkout-onepage-index .data-table td {
+}
+.checkout-cart-index .data-table td.td-edit,
+.checkout-cart-index .data-table td.td-price,
+.checkout-onepage-index .data-table td.td-edit,
+.checkout-onepage-index .data-table td.td-price {
+}
+.checkout-cart-index .data-table td.td-image,
+.checkout-onepage-index .data-table td.td-image {
+	max-width: 50px;
+	height: auto;
+}
+.checkout-cart-index .data-table td.td-image img,
+.checkout-onepage-index .data-table td.td-image img {
+	max-width: 50px;
+	height: auto;
+}
+.checkout-cart-index .data-table td.td-delete,
+.checkout-onepage-index .data-table td.td-delete {
+}
+
+.checkout-cart-index .data-table td .blueCapitalized, 
+.checkout-onepage-index .data-table td .blueCapitalized, 
+.checkout-cart-index .data-table td .blueCapitalized a,
+.checkout-onepage-index .data-table td .blueCapitalized a {
+	color: #30409f;
+}
+
+@media only screen and (min-width:480px) and (max-width: 767px) {
+	.row .row {
+		margin: 0;
+	}
+}
+
+@media only screen and (min-width:768px) and (max-width:959px){
+	.checkout-cart-index .data-table .a-center {
+		text-align: center !important;
+	}
+
+	.checkout-cart-index .data-table table,
+	.checkout-onepage-index .data-table table {
+		display: table;
+	}
+
+	.checkout-cart-index .data-table thead,
+	.checkout-onepage-index .data-table thead {
+		display: table-header-group;
+	}
+
+	.checkout-cart-index .data-table tr,
+	.checkout-onepage-index .data-table tr {
+		display: table-row;
+	}
+
+	.checkout-cart-index .data-table tbody,
+	.checkout-onepage-index .data-table tbody {
+		display: table-row-group;
+	}
+
+	.checkout-cart-index table.data-table td,
+	.checkout-onepage-index table.data-table td,
+	.checkout-cart-index .data-table th,
+	.checkout-onepage-index .data-table th {
+	    display: table-cell;
+	}
+
+	.checkout-cart-index .data-table td.td-name h2,
+	.checkout-onepage-index .data-table td.td-name h2 {
+		font-size: 1em;
+		font-weight: 300;
+	}
+
+	.checkout-cart-index .data-table table,
+	.checkout-cart-index .data-table thead,
+	.checkout-cart-index .data-table tbody,
+	.checkout-cart-index table.data-table td,
+	.checkout-cart-index .data-table tr,
+	.checkout-onepage-index .data-table table,
+	.checkout-onepage-index .data-table thead,
+	.checkout-onepage-index .data-table tbody,
+	.checkout-onepage-index table.data-table td,
+	.data-table tr {
+	}
+	.checkout-cart-index .data-table tfoot td,
+	.checkout-onepage-index .data-table tfoot td {
+	}
+	.checkout-cart-index .data-table th,
+	.checkout-onepage-index .data-table th {
+	}
+	.checkout-cart-index .data-table td,
+	.checkout-onepage-index .data-table td {
+	}
+	.checkout-cart-index .data-table td.td-name h2,
+	.checkout-onepage-index .data-table td.td-name h2 {
+		font-size: 1em;
+		font-weight: 300;
+	}
+	.checkout-onepage-index .data-table td.td-qty {
+		background: #f6f6f6;
+	}
+	.checkout-cart-index .data-table td.td-image a,
+	.checkout-onepage-index .data-table td.td-image a {
+		max-width: 50px;
+		height: auto;
+	}
+	.checkout-cart-index .data-table td.td-image img,
+	.checkout-onepage-index .data-table td.td-image img {
+		max-width: 50px;
+		height: auto;
+	}
+	.checkout-cart-index .data-table td.td-edit,
+	.checkout-cart-index .data-table .btn-remove,
+	.checkout-onepage-index .data-table td.td-edit,
+	.checkout-onepage-index .data-table .btn-remove {
+	}
+	.checkout-cart-index .data-table .td-actions .btn-remove,
+	.checkout-onepage-index .data-table .td-actions .btn-remove {
+
+	}
+
+	.checkout-cart-index .data-table .td-actions:first-of-type,
+	.checkout-onepage-index .data-table .td-actions:first-of-type {
+		display: none;
+	}
+
+	.checkout-cart-index .data-table .td-actions .btn-edit,
+	.checkout-onepage-index .data-table .td-actions .btn-edit {
+		display: none;
+	}
+	.checkout-cart-index .data-table td.td-price,
+	.checkout-onepage-index .data-table td.td-price {
+	}
+	.checkout-cart-index .data-table td.td-qty,
+	.checkout-onepage-index .data-table td.td-qty {
+	}
+	.checkout-cart-index .data-table td.td-delete,
+	.checkout-onepage-index .data-table td.td-delete {
+	}
+	.checkout-cart-index .data-table .td-title,
+	.checkout-onepage-index .data-table .td-title {
+		display: none;
+	}
+	.checkout-cart-index .data-table .td-actions,
+	.checkout-onepage-index .data-table .td-actions {
+	}
+
+	.checkout-cart-index .data-table td,
+	.checkout-onepage-index .data-table td {
+		background: #f6f6f6;
+	}
+
+	.checkout-cart-index .data-table tfoot td,
+	.checkout-onepage-index .data-table tfoot td {
+		background: transparent !important;
+	}
+
+}
+
+@media only screen and (max-width:767px){
+	.checkout-cart-index .data-table tfoot td,
+	.checkout-onepage-index .data-table tfoot td {
+		background: transparent !important;
+	}
+
+	.checkout-cart-index .data-table .a-center {
+		text-align: center !important;
+	}
+
+	.checkout-cart-index .data-table table,
+	.checkout-onepage-index .data-table table {
+		display: table;
+	}
+
+	.checkout-cart-index .data-table thead,
+	.checkout-onepage-index .data-table thead {
+		display: table-header-group;
+	}
+
+	.checkout-cart-index .data-table tr,
+	.checkout-onepage-index .data-table tr {
+		display: table-row;
+	}
+
+	.checkout-cart-index .data-table tbody,
+	.checkout-onepage-index .data-table tbody {
+		display: table-row-group;
+	}
+
+	.checkout-cart-index table.data-table td,
+	.checkout-onepage-index table.data-table td,
+	.checkout-cart-index .data-table th,
+	.checkout-onepage-index .data-table th {
+	    display: table-cell;
+	}
+
+	.checkout-cart-index .data-table td.td-name h2,
+	.checkout-onepage-index .data-table td.td-name h2 {
+		font-size: 1em;
+		font-weight: 300;
+	}
+	.checkout-cart-index .data-table td.td-image a,
+	.checkout-onepage-index .data-table td.td-image a {
+	}
+	.checkout-cart-index .data-table td.td-image img,
+	.checkout-onepage-index .data-table td.td-image img {
+	}
+	.checkout-cart-index .data-table td.td-edit,
+	.checkout-cart-index .data-table .btn-remove,
+	.checkout-onepage-index .data-table td.td-edit,
+	.checkout-onepage-index .data-table .btn-remove {
+	}
+	.checkout-cart-index .data-table .td-actions .btn-remove,
+	.checkout-cart-index .data-table .td-actions .btn-edit,
+	.checkout-onepage-index .data-table .td-actions .btn-remove,
+	.checkout-onepage-index .data-table .td-actions .btn-edit {
+	}
+
+	.checkout-cart-index .data-table td,
+	.checkout-onepage-index .data-table td {
+		background: #f6f6f6;
+	}
+
+	.checkout-cart-index .data-table td.td-delete,
+	.checkout-onepage-index .data-table td.td-delete {
+	}
+	.checkout-cart-index .data-table .td-title,
+	.checkout-onepage-index .data-table .td-title {
+	}
+	.checkout-cart-index .data-table .td-actions,
+	.checkout-onepage-index .data-table .td-actions {
+	}
+	.checkout-cart-index .data-table .button,
+	.checkout-cart-index .data-table .btn-continue,
+	.checkout-onepage-index .data-table .button,
+	.checkout-onepage-index .data-table .btn-continue {
+	}
+}
+
+.checkout-onepage-index #checkout-review-table thead tr.first.last th {
+	background: #f6f6f6;
+}
+
 .checkout-cart-index .main-container,
 .checkout-onepage-index .main-container #checkout-step-review {
 	background: #fff !important;
@@ -305,21 +593,33 @@
 	-webkit-box-shadow: none !important;
 }
 
+.checkout-cart-index .title-buttons .checkout-types li {
+	float: left;
+}
+
+
 @media only screen and (min-width: 1200px) {
 	.checkout-cart-index .cart-collaterals > div:nth-of-type(2) {
 		margin: 0 65px !important;
 	}
 }
 
-@media only screen and (min-width: 960px) {
-	ul.checkout-types li {
-		float: left;
-	}
-}
-
 @media only screen and (min-width: 960px) and (max-width: 1200px) {
 	.checkout-cart-index .cart-collaterals > div:nth-of-type(2)  {
 		margin: 0 49px !important;
+	}
+}
+
+@media only screen and (max-width: 959px) {
+	.checkout-cart-index #shopping-cart-table 
+	tfoot .blueTable__row.first.last > td {
+		text-align: center !important;
+	}
+
+	.checkout-cart-index #shopping-cart-table 
+	tfoot .blueTable__row.first.last > td > button {
+		float: none !important;
+		margin: 5px 10px;
 	}
 }
 
@@ -361,9 +661,19 @@
 }
 
 @media only screen and (max-width: 767px) {
+	.checkout-cart-index .title-buttons .checkout-types li {
+		float: none;
+	}
+
 	.checkout-cart-index .main.row,
 	.checkout-onepage-index .main.row {
 		width: 100%;
+	}
+
+	.checkout-cart-index .blueTable__row {
+		margin: 0;
+		padding: 5px;
+		padding-left: 0;
 	}
 
 	.checkout-onepage-index #checkout-step-login {
@@ -386,8 +696,8 @@
 	}
 
 	.checkout-cart-index #shopping-cart-table .blueTable__row .td-price {
-		padding-right: 10px;
-		padding-left: 10px;
+		padding-right: 4px;
+		padding-left: 4px;
 	}
 
 	.checkout-cart-index #shopping-cart-table .item-actions {
@@ -397,6 +707,7 @@
 	}
 
 	.checkout-cart-index #shopping-cart-table .item-actions .item-action {
+		font-size: 11px;
 		padding-right: 5px;
 	}
 
@@ -410,14 +721,14 @@
 		display: none;
 	}
 
-	.checkout-cart-index #checkout-review-table .td-image,
+	.checkout-onepage-index #checkout-review-table .td-image,
 	.checkout-cart-index #shopping-cart-table .td-image {
 	    padding: 0;
 	    margin: 0;
 	}
 
-	.checkout-cart-index #checkout-review-table .td-image,
-	.checkout-cart-index #checkout-review-table .td-image img,
+	.checkout-onepage-index #checkout-review-table .td-image,
+	.checkout-onepage-index #checkout-review-table .td-image img,
 	.checkout-cart-index #shopping-cart-table .td-image,
 	.checkout-cart-index #shopping-cart-table .td-image img {
 		max-width: 40px;
@@ -438,16 +749,6 @@
 
 	.checkout-cart-index #shopping-cart-table .td-qty input {
 		width: 18px;
-	}
-
-	.checkout-cart-index #shopping-cart-table 
-	tfoot .blueTable__row.first.last > td {
-		text-align: center !important;
-	}
-	.checkout-cart-index #shopping-cart-table 
-	tfoot .blueTable__row.first.last > td > button {
-		float: none !important;
-		margin: 5px 10px;
 	}
 
 	.checkout-onepage-index #checkoutSteps .block.well--block {
