update fancybox to fix event bug - refs #10744

--- a/htdocs/skin/frontend/jumbobag/default/css/styles.css
+++ b/htdocs/skin/frontend/jumbobag/default/css/styles.css
@@ -2340,3 +2340,9 @@ h2.p2 span strong {
   line-height: 25px;
   text-transform: capitalize;
 }
+
+/** fancybox */
+.fancybox-close {
+  top: 0;
+  right: 0;
+}
