--- a/htdocs/skin/frontend/new_jumbobag/default/css/styles.css
+++ b/htdocs/skin/frontend/new_jumbobag/default/css/styles.css
@@ -6200,3 +6200,35 @@ background-size: 100% 470px!important; background-position: 0px 0px!important; h
 .title-product-h1{
   display: none !important;
 }
+
+/** notice-coolie */
+#notice-cookie-block {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  padding: 3px;
+  background-color: #fff;
+}
+#notice-cookie-block .notice-text {
+  display: inline-block;
+  width: 80%;
+  margin-right: -4px;
+}
+#notice-cookie-block .actions {
+  display: inline-block;
+  width: 20%;
+  margin-right: -4px;
+  text-align: right;
+}
+#notice-cookie-block .actions .button,
+#notice-cookie-block .actions .button span {
+  height: 25px;
+  line-height: 25px;
+  text-transform: capitalize;
+}
+
+/** fancybox */
+.fancybox-skin .fancybox-close {
+  top: 0;
+  right: 0;
+}
